syntax = "proto3";

package greet;

option java_package = "com.proto.greet";
option java_multiple_files = true;

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}

service GreetService {
    // Unary
    rpc SayHello (HelloRequest) returns (HelloReply) {
    }
}